# cudaTemplate

./: CMakeLists.txt  kernel.cu
